Update JVM arguments and dependency versions